<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QandAScr">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.077">

        <LinearLayout
            android:id="@+id/ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:contentDescription="@string/qanda"
                android:id="@+id/imageView3"
                android:layout_width="150dp"
                android:layout_height="150dp"
                app:srcCompat="@drawable/qanda"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="50dp"/>

            <TextView
                android:id="@+id/quesTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="#ED3737"
                android:padding="20dp"
                android:text=""
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textAlignment="center"
                android:layout_marginTop="40dp"/>

            <TextView
                android:id="@+id/ansTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="#0C3C90"
                android:padding="20dp"
                android:text=""
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textAlignment="center"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="60dp">

                <Button
                    android:id="@+id/prevBtn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="#E1CD4D"
                    android:text="@string/previous"
                    android:textColor="#040101"
                    android:textSize="20sp"
                    android:layout_margin="20dp"/>

                <Button
                    android:id="@+id/nextBtn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="#E1CD4D"
                    android:text="@string/next"
                    android:textColor="#040101"
                    android:textSize="20sp"
                    android:layout_margin="20dp"/>


            </LinearLayout>

        </LinearLayout>

    </ScrollView>




</androidx.constraintlayout.widget.ConstraintLayout>